force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/nFORCE__Business_Process_Interaction__c.object-meta.xml
<CustomObject>
    <description>This object maintains the state for interactions over the course of a transaction.</description>
    <label>Business Process Interaction</label>
    <nameField>
        <displayFormat>BPI-{00000}</displayFormat>
        <label>Business Process Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Process Interactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>