force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/fields/nFORCE__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context_Id__c</fullName>
    <description>The system automatically populates this required text field with the identifier of the object related to this transaction.</description>
    <inlineHelpText>Displays the identifier of the object related to this transaction.</inlineHelpText>
    <label>Context Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>