force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/fields/nFORCE__Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Correlation_Id__c</fullName>
    <description>The system automatically populates this required string field with an ID that refers to all business activities in the scope of this transaction.</description>
    <inlineHelpText>Displays an ID that refers to all business activities in the scope of this transaction.</inlineHelpText>
    <label>Correlation Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>