force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/fields/nFORCE__Duration__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Duration__c</fullName>
    <description>The system automatically populates this field with the end-to-end processing time of the Business Process Interaction.</description>
    <formula>nFORCE__FinalTimestamp__c - nFORCE__Timestamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the end-to-end processing time of the Business Process Interaction.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>