force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/fields/nFORCE__Message__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Message__c</fullName>
    <description>The system automatically populates this optional text field with the most recent,  relevant integration message, such as errors or the last recorded success state. By default, it is blank.</description>
    <inlineHelpText>Displays the most recent integration message, such as errors or the last recorded success state.</inlineHelpText>
    <label>Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>