force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/fields/nFORCE__Parent_Business_Process_Interaction__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Business_Process_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field with the parent record to which this transaction is associated.</description>
    <inlineHelpText>Displays the parent record to which this transaction is associated.</inlineHelpText>
    <label>Parent Business Process Interaction</label>
    <referenceTo>nFORCE__Business_Process_Interaction__c</referenceTo>
    <relationshipLabel>Parent Business Process Interactions</relationshipLabel>
    <relationshipName>Business_Process_Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>