force-app/main/default/objects/nFORCE__Business_Process_Interaction__c/fields/nFORCE__Status__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Status__c</fullName>
    <description>The system automatically populates this text field with the normalized status to which this transaction was set. By default, it is Queued.</description>
    <inlineHelpText>Displays the status to which this transaction was set when created.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Completed With Errors</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>